# jared

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: jared-file.md  jared-groom.md  jared-init.md  jared-reshape.md  jared-start.md  jared-wrap.md  jared.md
docs/: project-board.md
docs/superpowers/plans/: 2026-04-22-jared-levelup.md  2026-04-25-jared-wrap-next-session-prompt.md  2026-04-26-jared-start-handoff-pickup.md  2026-05-02-tied-issues.md  2026-05-03-pii-redactor.md
docs/superpowers/plans/archived/2026-04/: 2026-04-22-jared-levelup.md  2026-04-25-jared-wrap-next-session-prompt.md  2026-04-26-jared-start-handoff-pickup.md
docs/superpowers/plans/archived/2026-05/: 2026-05-02-tied-issues.md  (+1 more)
docs/superpowers/specs/: 2026-04-22-jared-levelup-design.md  2026-04-25-jared-wrap-next-session-prompt-design.md  2026-05-02-tied-issues-design.md  2026-05-03-pii-redactor-design.md
manage-project-board/: SKILL.md
manage-project-board/references/: board-sweep.md  dependencies.md  design-rationale.md  human-readable-board.md  milestones-and-roadmap.md  new-board.md  operations.md
manage-project-board/scripts/: board-summary.sh  sweep.py
skills/jared/: SKILL.md
skills/jared/assets/: issue-body.md.template  next-session-prompt.md.template  plan-conventions.md.template  project-board.md.template  session-note.md.template
skills/jared/references/: board-sweep.md  context-capture.md  dependencies.md  design-rationale.md  human-readable-board.md  jared-cli.md  migration.md  milestones-and-roadmap.md  new-board.md  operations.md  pii-pre-flight.md  plan-spec-integration.md  session-continuity.md  structural-review.md  voice.md
skills/jared/scripts/: archive-plan.py  board-summary.sh  bootstrap-project.py  capture-context.py  dependency-graph.py  jared  sweep.py
skills/jared/scripts/lib/: board.py  ties.py
tests/: conftest.py  seed-issues.yaml  test_archive_plan.py  test_board.py  test_board_fetch_for_ties.py  test_bootstrap_project_defaults.py  test_bootstrap_project_patch.py  test_capture_context.py  test_cli.py  test_cmd_add_to_board.py  test_cmd_blocked_by.py  test_cmd_close.py  test_cmd_comment.py  test_cmd_file.py  test_cmd_get_item.py  test_cmd_move.py  test_cmd_next_session_prompt.py  test_cmd_set.py  test_cmd_summary.py  test_cmd_ties.py  test_integration_item_add_idempotency.py  test_link_project_to_repo.py  test_pre_flight.py  test_sweep_checks.py  test_ties_analyzers.py  test_ties_combine.py  test_ties_dataclasses.py  test_ties_format.py  testbed-setup.md  testbed.env.example
(+5 files in other folders)
