[project]
name = "jared"
version = "0.2.0-dev"
description = "Jared — GitHub Projects v2 board steward (Claude Code plugin)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

# This project is a Claude Code plugin, not a Python distributable. We use
# pyproject.toml only for dev-tool config (pytest/ruff/mypy) and to pin
# deps for the venv. Tell setuptools not to try to build a wheel.
[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"
# Legacy batch scripts (sweep.py, bootstrap-project.py, etc.) pre-date the new
# ruff config and will be migrated in Phase 3. Exclude them here until that
# cleanup happens, so Phase 2 lint passes don't surface pre-existing findings.
extend-exclude = [
    "skills/jared/scripts/archive-plan.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["skills/jared/scripts", "tests"]
exclude = ["skills/jared/scripts/__pycache__"]
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
markers = [
    "integration: requires TESTBED_* env + network; opt-in via -m integration",
]
testpaths = ["tests"]
pythonpath = ["."]  # Allow `from skills.jared.scripts.lib.board import ...`
addopts = "-m 'not integration'"
